# jlr-hackathon-2023

./: CMakeLists.txt  README.md  helper.txt  package-lock.json  package.json  run1.sh  run2.sh  run3.sh
Client/: CMakeLists.txt  client.hpp  client_main.cpp  local.json
CopyCatIntruder/: CMakeLists.txt  config.json  copy_service.hpp  copy_service_main.cpp  local.json
Intruder/: CMakeLists.txt  intruder.hpp  intruder_main.cpp  local.json
Server/: CMakeLists.txt  local.json  service.hpp  service_main.cpp
jlr-hackathon-2023/: package.json
jlr-hackathon-2023/src/: App.js
jlr-hackathon-2023/src/Components/: Navbar.js  RunnerAnimation.css  ServerClientModel.js
public/: index.html
src/Components/: Console.css  Console.js  EncryptedCommunication.js  FalseDataAttacks.js  Navbar.css  RunnerAnimation.css  RunnerAnimation.js  SpamAttacks.js
src/Components/helper_functions/: getLogs.js
